--- a/style.css
+++ b/style.css
@@ -4,236 +4,67 @@ header("Content-type: text/css");
 
 *{font-family: 'Lato', sans-serif;}
 
-@keyframes click-wave {
-  0% {
-    height: 40px;
-    width: 40px;
-    opacity: 0.35;
-    position: relative;
-  }
-  100% {
-    height: 200px;
-    width: 200px;
-    margin-left: -80px;
-    margin-top: -80px;
-    opacity: 10;
-  }
-}
-
-input {
-    width: 60px;
-}
-
-select {
-	width: 220px;
-	
-}
-
-.option-input {
-  -webkit-appearance:none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-  position: relative;
-  top: 5px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  transition: all 0.15s ease-out 0s;
-  background: #cbd1d8;
-  border: none;
-  color: #000000;
-  font:400;
-  cursor: pointer;
-  display: inline-block;
-  margin-right: 0.5rem;
-  outline: none;
-  position: relative;
-  z-index: 1000;
-}
-.option-input:hover {
-  background: #9faab7;
-  background-color: RoyalBlue;	
-}
-.option-input:checked {
-  background: #40e0d0;
-}
-.option-input:checked::before {
-  height: 20px;
-  width: 20px;
-  position: absolute;
-  content: none;
-  display: inline-block;
-  font-size: 12px;
-  text-align: center;
-  line-height: 20px;
-}
-.option-input:checked::after {
-  -webkit-animation: click-wave 0.65s;
-  -moz-animation: click-wave 0.65s;
-  animation: click-wave 0.65s;
-  background: #40e0d0;
-  content: '';
-  display: block;
-  position: relative;
-  z-index: 100;
-}
-.option-input.radio {
-  border-radius: 50%;
-}
-.option-input.radio::after {
-  border-radius: 50%;
-}
-#menu
-{	background-color: rgba(1, 181, 255, 0.3);
-	background: rgba(1, 181, 255, 0.8);
-	color: rgba(f, f, f, f);
-	border:none;
--moz-border-radius-topleft: 25px;
--moz-border-radius-topright:25px;
--moz-border-radius-bottomleft:25px;
--moz-border-radius-bottomright:25px;
--webkit-border-top-left-radius:25px;
--webkit-border-top-right-radius:25px;
--webkit-border-bottom-left-radius:25px;
--webkit-border-bottom-right-radius:25px;
-border-top-left-radius:25px;
-border-top-right-radius:25px;
-border-bottom-left-radius:25px;
-border-bottom-right-radius:25px;
-	font-size: 24px;
-	width: 120px;
-	lenght: 200px;
-	padding: 150px;
-	margin-left: auto;	
-	margin-right: auto;
-	margin-top: 70px;
-	margin-bottom: 100px;
-	position: static;
-}
-
-#napis
-{position: relative;
-margin-right: 100%;
- padding-left: 0px;
-    width: 200px;
-    padding-right: 0px;
-    right: 40px;
-    margin-right: 0px;
-    bottom: 10px;
-    font-weight: 900;
-}
-
- body { 	
-  background-image: url("obrazytla/tlo.jpg");
-  background-size: 1600px 830px;
-  background-repeat: repeat;
- 
-  color: #000000;
-  font-family:  "Lato", sans-serif;
-  text-align: left;
-  } 
-body div {
-  padding: 1rem;
-}
-body label {
-  display: block;
-  line-height: 40px;
-}
-
-.button2 {
-  top: 13.33333px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.right {
-    position: absolute;
-    right: 50px;
-    width: 100px;
-    border: 1px solid orange;
-    padding: 10px;
-    background-color: RoyalBlue;
-    text-align: center;
-} 
-table, th, td {
-   border: 1px solid black;
-   text-align: center;
-}
- 	
-.btn {
-    background-color: DodgerBlue;
-    border: none;
-    color: white;
-    padding: 12px 16px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: RoyalBlue;
-}
-
- #conteiner
-{
-	width: 100%;
-	margin-left: auto;	
-	margin-right: auto;	 
-}
- #header
-{	
-	background-color: rgba(1, 181, 255, 0.7);
-	margin:                             10px;
-	font-size:         					24px;	
-	font-weight:     				   900px;
-	color:      					 #000000;
-	border-radius: 20px;
-	width: 100%;
-	
-}
- 
-#central
-{background-color: rgba(1, 181, 255, 0.3);
-	background: rgba(1, 181, 255, 0.8);
-	color: rgba(f, f, f, f);
-	border:none;
--moz-border-radius-topleft: 25px;
--moz-border-radius-topright:25px;
--moz-border-radius-bottomleft:25px;
--moz-border-radius-bottomright:25px;
--webkit-border-top-left-radius:25px;
--webkit-border-top-right-radius:25px;
--webkit-border-bottom-left-radius:25px;
--webkit-border-bottom-right-radius:25px;
-border-top-left-radius:25px;
-border-top-right-radius:25px;
-border-bottom-left-radius:25px;
-border-bottom-right-radius:25px;
-	font-size: 24px;
-	width: 120px;
-	lenght: 200px;
-	padding: 150px;
-	margin-left: auto;	
-	margin-right: auto;
-	margin-top: 70px;
-	margin-bottom: 100px;
-	position: static;	
-}
 #footer
 {
  position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
-  lenght:200px; 
+  width: 100%; 
   background-color: RGBA(0,14,0,0.54);
   color: white;
   text-align: center;
+  	
+ 
+}
+ 
+.defaultDiv
+{
+  background: RGBA(89,211,0,0.75);
+  color: rgba(f, f, f, f);
+  border:none;
+  border-radius: 25px;
+  padding: 30px;
+  margin-left: auto;  
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  position: static; 
+  width: 80%;
+ box-shadow: 3px 4px 18px 0 rgba(221,221,221,1) ;
 }
 
+.defaultFont
+{
+  text-align:center; 
+  font-size: 24px; 
+  text-shadow: 0px 0px 20px rgba(0,0,0,0.81);
+}
+.errors
+{
+	color: 	RGB(165,0,0);
+	background-color: RGBA(207,0,1,0.67);	
+}
+
+body {  
+  background-image: url("obrazytla/tlo.jpg");
+  background-size: 100%;
+  background-repeat: repeat;
+  font-size: 18px;
+ 
+  } 
+  
+.facebook {
+  color:white;
+  border-radius:50px; 
+  text-decoration:none;
+  background-color: #007bff;
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  float:right;
+}
 
 
